--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,20 @@
-
 {
-  "name": "SkyCast Pro",
-  "short_name": "SkyCast",
-  "start_url": "./index.html",
-  "display": "standalone",
-  "background_color": "#10131a",
-  "theme_color": "#4facfe",
+  "short_name": "SkyScope",
+  "name": "SkyScope \u2013 Advanced Weather",
   "icons": [
-    { "src": "assets/logo.svg", "sizes": "192x192", "type": "image/svg+xml" }
-  ]
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#0b1020",
+  "background_color": "#0b1020"
 }
